# lib/db/src/schema/index.ts
@@ -3,3 +3,4 @@ export * from "./customers";
 export * from "./suppliers";
 export * from "./sales";
 export * from "./purchases";
+export * from "./settings";
